--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,3 +1,5 @@
+{# templates/security/login.html.twig #}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Me connecter{% endblock %}
@@ -10,19 +12,19 @@
 
     {% if app.user %}
         <div class="mb-3">
-           Vous êtes déja connecté(e) tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Me déconnecter</a>
+           Vous êtes déja connecté(e) en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Me déconnecter</a>
         </div>
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
     <div>
         <label for="inputEmail">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" 
+        <input type="email" value="{{ last_username }}" name="_username" 
         id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     </div>
     <div>
         <label for="inputPassword">Mot de passe</label>
-        <input type="password" name="password" id="inputPassword"
+        <input type="password" name="_password" id="inputPassword"
          class="form-control" autocomplete="current-password" required>
     </div>
 
@@ -34,6 +36,6 @@
         Me connecter
     </button>
     <p><a href="#">Mot de passe oublié</a></p>
-    <p>Pas encore inscrit(e)<a href="#"> M'inscrire</a></p>
+    <p>Pas encore inscrit(e) <a href="{{path('app_register')}}"> M'inscrire</a></p>
 </form>
 {% endblock %}
