--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,7 +19,7 @@
      </div>
 
      <div>
-        {{ form_row(registrationForm.plainPassword, {
+        {{ form_row(registrationForm.password, {
             label: 'Password'
         }) }}
     </div>
