--- a/templates/admin/my-dashboard.html.twig
+++ b/templates/admin/my-dashboard.html.twig
@@ -1,4 +1,3 @@
-{# templates/admin/my-dashboard.html.twig #}
 {% extends '@EasyAdmin/page/content.html.twig' %}
 
 {% block content %}
@@ -13,10 +12,16 @@
         <h2>Progression des Contrats</h2>
         <canvas id="progressionChart" width="400" height="200"></canvas>
 
-
+        <!-- Calendrier -->
+        <h2>Calendrier</h2>
+        <div id="calendar"></div>
 
         <!-- Incluez Chart.js -->
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        <!-- Incluez FullCalendar -->
+        <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.0.1/main.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.0.1/main.min.js"></script>
 
         <script>
             // Obtenez les données du graphique de workflow
@@ -86,6 +91,17 @@
                     }
                 }
             });
+
+            // Initialiser FullCalendar
+            document.addEventListener('DOMContentLoaded', function() {
+                var calendarEl = document.getElementById('calendar');
+                var calendar = new FullCalendar.Calendar(calendarEl, {
+                    plugins: [ 'dayGrid' ],
+                    events: '/calendar/events' // Route API exposée par le contrôleur Google Calendar
+                });
+                calendar.render();
+            });
         </script>
     </div>
 {% endblock %}
+
