--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -28,3 +28,12 @@
     width: 50%; /* Ajuste la largeur des graphiques */
     height: 300px; /* Ajuste la hauteur des graphiques */
 }
+.sidebar-menu .nav-item a .fa {
+    font-size: 18px; /* Taille des icônes */
+    margin-right: 10px; /* Espace entre l'icône et le texte */
+}
+
+.sidebar-menu .nav-item a:hover {
+    background-color: #f0f0f0; /* Changer la couleur au survol */
+    color: #333; /* Changer la couleur du texte au survol */
+}
